--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "check-env": "bun src/env.ts",
+    "dev": "bun run check-env && next dev",
+    "build": "bun run check-env && next build",
     "start": "next start",
     "lint": "next lint"
   },
