--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.4.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -17,6 +18,7 @@
     "@supabase/supabase-js": "^2.38.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "negotiator": "^0.6.3",
     "next": "13.5.6",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -26,6 +28,7 @@
     "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
