feat: landing page modal and links

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,3 +3,6 @@
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 NEXT_PUBLIC_OAUTH_PROVIDERS="github google"
+NEXT_PUBLIC_TOS_URL=https://example.com/your-tos-url
+NEXT_PUBLIC_PP_URL=https://example.com/your-pp-url
+NEXT_PUBLIC_ACCESS_FORM_URL=https://example.com/your-access-form-url
