feat: use env to toggle signups (see #4)

--- a/.env.local.example
+++ b/.env.local.example
@@ -6,3 +6,4 @@ NEXT_PUBLIC_OAUTH_PROVIDERS="github google"
 NEXT_PUBLIC_TOS_URL=https://example.com/your-tos-url
 NEXT_PUBLIC_PP_URL=https://example.com/your-pp-url
 NEXT_PUBLIC_ACCESS_FORM_URL=https://example.com/your-access-form-url
+# NEXT_PUBLIC_SIGNUPS_OPEN=1
