feat: implement non-custodial local wallet

--- a/.env.local.example
+++ b/.env.local.example
@@ -7,3 +7,8 @@ NEXT_PUBLIC_TOS_URL=https://example.com/your-tos-url
 NEXT_PUBLIC_PP_URL=https://example.com/your-pp-url
 NEXT_PUBLIC_ACCESS_FORM_URL=https://example.com/your-access-form-url
 # NEXT_PUBLIC_SIGNUPS_OPEN=1
+
+# Update these with an API key creted via
+# https://thirdweb.com/dashboard/settings/api-keys
+NEXT_PUBLIC_THIRDWEB_CLIENT_ID=your-client-id
+THIRDWEB_SECRET_KEY=your-secret-key
