--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/supabase-js": "^2.38.2",
+    "@thirdweb-dev/react": "^4.0.10",
+    "@thirdweb-dev/sdk": "^4.0.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "ethers": "^5",
     "negotiator": "^0.6.3",
     "next": "13.5.6",
     "next-themes": "^0.2.1",
@@ -37,6 +40,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "pino-pretty": "^10.2.3",
     "postcss": "^8",
     "supabase": "^1.106.1",
     "tailwindcss": "^3",
