--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "clsx": "^2.0.0",
     "ethers": "^5",
     "negotiator": "^0.6.3",
-    "next": "13.5.6",
+    "next": "^13",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -49,5 +49,8 @@
   },
   "trustedDependencies": [
     "supabase"
-  ]
+  ],
+  "overrides": {
+    "next": "^13"
+  }
 }
