--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,7 @@
-# Update these with your Supabase details from your project settings > API
+# Metadata
+NEXT_PUBLIC_SITE_TITLE="Mesa"
+NEXT_PUBLIC_SITE_DESCRIPTION="Welcome to Mesa"# Update these with your Supabase details from your project settings > API
+
 # https://app.supabase.com/project/_/settings/api
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
