--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@supabase/auth-helpers-nextjs": "^0.8.1",
+    "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.38.2",
     "@thirdweb-dev/react": "^4.0.10",
     "@thirdweb-dev/sdk": "^4.0.9",
@@ -35,6 +35,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.4",
     "zod-form-data": "^2.0.2"
