--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@thirdweb-dev/sdk": "^4.0.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "ethers": "^5",
     "negotiator": "^0.6.3",
     "next": "^14",
