--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "db:start": "supabase start",
     "db:stop": "supabase stop",
     "db:reset": "supabase db reset",
-    "db:pull": "supabase db pull --schema public,auth,storage",
-    "db:push": "supabase db push --schema public,auth,storage",
+    "db:pull": "supabase db pull --schema public,auth,storage,mesa",
+    "db:push": "supabase db push",
     "db:up": "supabase migration up",
     "db:types": "supabase gen types typescript --local --schema public,auth,storage,mesa > src/types/supabase.ts"
   },
