--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18",
     "react-dom": "^18",
     "server-only": "^0.0.1",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.4",
     "zod-form-data": "^2.0.2"
