--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.38.2",
     "@tanstack/react-table": "^8.10.7",
+    "@thirdweb-dev/chains": "^0.1.62",
     "@thirdweb-dev/react": "^4.0.10",
     "@thirdweb-dev/sdk": "^4.0.9",
+    "@thirdweb-dev/wallets": "^2.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
