--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint",
     "rebuild": "npm rebuild",
     "start": "next start",
+    "supabase": "supabase",
     "db:start": "supabase start",
     "db:stop": "supabase stop",
     "db:reset": "supabase db reset",
