I add initial wallet connection button via Thirdweb following existing packages. will wait for team to determine if we use Thirdweb wallet connect or focus on coinbase-smart-wallet native integration.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "build": "bun check-env && next build",
-    "check-env": "bun src/env.ts",
-    "dev": "bun check-env && next dev",
+    "build": "pnpm check-env && next build",
+    "check-env": "tsx src/env.ts",
+    "dev": "pnpm next dev",
     "lint": "next lint",
     "rebuild": "npm rebuild",
     "start": "next start",
