WIP: install ipfs-http-client

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ethers5_providers": "npm:@ethersproject/providers@^5",
     "ethers5_web": "npm:@ethersproject/web@^5",
     "ethers6": "npm:ethers@^6",
+    "ipfs-http-client": "^60.0.1",
     "negotiator": "^0.6.3",
     "next": "^14",
     "next-themes": "^0.2.1",
