--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "db:types": "supabase gen types typescript --local --schema public,auth,storage,mesa > src/types/supabase.ts"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^0.18.6",
+    "@coinbase/wallet-sdk": "4",
     "@ethereum-attestation-service/eas-contracts": "^1.3.7",
     "@ethereum-attestation-service/eas-sdk": "^1.3.7",
     "@formatjs/intl-localematcher": "^0.4.2",
@@ -30,6 +32,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.38.2",
+    "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -37,12 +40,14 @@
     "negotiator": "^0.6.3",
     "next": "^14",
     "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "permissionless": "^0.1.30",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
     "viem": "^2.13.6",
+    "wagmi": "^2.9.8",
     "zod": "^3.22.4",
     "zod-form-data": "^2.0.2"
   },
