--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "db:types": "supabase gen types typescript --local --schema public,auth,storage,mesa > src/types/supabase.ts"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "^0.18.6",
-    "@coinbase/wallet-sdk": "4",
+    "@coinbase/onchainkit": "^0.19.6",
+    "@coinbase/wallet-sdk": "^4.0.3",
     "@ethereum-attestation-service/eas-contracts": "^1.3.7",
     "@ethereum-attestation-service/eas-sdk": "^1.3.7",
     "@formatjs/intl-localematcher": "^0.4.2",
@@ -47,13 +47,13 @@
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
-    "viem": "^2.13.6",
-    "wagmi": "^2.9.8",
+    "viem": "^2.13.7",
+    "wagmi": "^2.9.10",
     "zod": "^3.22.4",
     "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
-    "@types/negotiator": "^0.6.2",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
