--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-table": "^8.10.7",
     "@wagmi/core": "^2.10.5",
+    "bun": "^1.1.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
