--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@supabase/supabase-js": "^2.38.2",
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-table": "^8.10.7",
+    "@types/uuid": "^10.0.0",
     "@wagmi/core": "^2.10.5",
     "bun": "^1.1.13",
     "class-variance-authority": "^0.7.0",
@@ -49,6 +50,7 @@
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
+    "uuid": "^10.0.0",
     "viem": "^2.13.7",
     "wagmi": "^2.9.10",
     "zod": "^3.22.4",
