--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "ipfs-http-client": "^60.0.1",
     "negotiator": "^0.6.3",
     "next": "^14",
     "next-themes": "^0.2.1",
