--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "db:types": "supabase gen types typescript --local --schema public,auth,storage,mesa > src/types/supabase.ts"
   },
   "dependencies": {
+    "@0xsplits/splits-sdk": "^4.0.3",
     "@coinbase/onchainkit": "^0.19.6",
     "@coinbase/wallet-sdk": "^4.0.3",
     "@ethereum-attestation-service/eas-contracts": "^1.3.7",
@@ -37,6 +38,7 @@
     "@tanstack/react-table": "^8.10.7",
     "@types/uuid": "^10.0.0",
     "@wagmi/core": "^2.10.5",
+    "@zoralabs/protocol-sdk": "^0.7.1",
     "bun": "^1.1.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
