--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "db:types": "supabase gen types typescript --local --schema public,auth,storage,mesa > src/types/supabase.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.613.0",
     "@coinbase/onchainkit": "^0.19.6",
     "@coinbase/wallet-sdk": "^4.0.3",
     "@ethereum-attestation-service/eas-contracts": "^1.3.7",
@@ -41,6 +42,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "formidable": "^3.5.1",
     "ipfs-http-client": "^60.0.1",
     "negotiator": "^0.6.3",
     "next": "^14",
