--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
+    "@soundxyz/sdk": "^7.1.0",
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.38.2",
     "@tanstack/react-query": "^5.40.1",
