--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "negotiator": "^0.6.3",
     "next": "^14",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.14",
     "permissionless": "^0.1.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -60,6 +61,7 @@
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
