I send email with dynamic params hard-coded in the UI components.

--- a/.env.local.example
+++ b/.env.local.example
@@ -20,3 +20,6 @@ THIRDWEB_SECRET_KEY=your-secret-key-with-at-least-32-characters
 
 # Random string included when genrating wallet tokens on the server.
 SERVER_SECRET_KEY=your-server-secret-key-with-at-least-32-characters
+
+# Email
+RESEND_API_KEY=your-resend-api-key
