--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "permissionless": "^0.1.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resend": "^3.4.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
