I update IPFS to use pinata.

--- a/.env.local.example
+++ b/.env.local.example
@@ -23,3 +23,6 @@ SERVER_SECRET_KEY=your-server-secret-key-with-at-least-32-characters
 
 # Email
 RESEND_API_KEY=your-resend-api-key
+
+# IPFS
+PINATA_JWT=your-pinata-jwt
