--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@supabase/supabase-js": "^2.38.2",
     "@tanstack/react-query": "^5.49.0",
     "@tanstack/react-table": "^8.10.7",
+    "@types/lodash": "^4.17.7",
     "@types/uuid": "^10.0.0",
     "@wagmi/core": "^2.10.5",
     "@zoralabs/protocol-sdk": "^0.9.1",
@@ -47,6 +48,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "ipfs-http-client": "^60.0.1",
+    "lodash": "^4.17.21",
     "negotiator": "^0.6.3",
     "next": "^14",
     "next-themes": "^0.2.1",
@@ -54,6 +56,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
+    "react-number-format": "^5.4.1",
     "resend": "^3.4.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
