--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@ethereum-attestation-service/eas-contracts": "^1.3.7",
     "@ethereum-attestation-service/eas-sdk": "^1.3.7",
     "@formatjs/intl-localematcher": "^0.4.2",
+    "@headlessui/react": "^2.1.3",
+    "@heroicons/react": "^2.1.5",
+    "@hookform/error-message": "^2.0.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -39,6 +42,8 @@
     "@supabase/supabase-js": "^2.38.2",
     "@tanstack/react-query": "^5.49.0",
     "@tanstack/react-table": "^8.10.7",
+    "@types/lodash": "^4.17.7",
+    "@types/react-blockies": "^1.4.4",
     "@types/uuid": "^10.0.0",
     "@wagmi/core": "^2.10.5",
     "@zoralabs/protocol-sdk": "^0.9.1",
@@ -47,13 +52,17 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "ipfs-http-client": "^60.0.1",
+    "lodash": "^4.17.21",
     "negotiator": "^0.6.3",
     "next": "^14",
     "next-themes": "^0.2.1",
     "permissionless": "^0.1.30",
     "react": "^18.2.0",
+    "react-blockies": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-loading": "^2.0.3",
+    "react-number-format": "^5.4.1",
     "resend": "^3.4.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
