--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "html2pdf.js": "^0.10.2",
     "ipfs-http-client": "^60.0.1",
     "lodash": "^4.17.21",
     "negotiator": "^0.6.3",
