--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/uuid": "^10.0.0",
     "@wagmi/core": "^2.10.5",
     "@wavesurfer/react": "^1.0.7",
+    "@zoralabs/protocol-deployments": "^0.3.8",
     "@zoralabs/protocol-sdk": "^0.9.1",
     "bs58": "^6.0.0",
     "bun": "^1.1.13",
